Add Pagina Cadastro Tarefa

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,9 @@
 $yale-blue : #1D4E89;
 $pacific-blue: #00B2CA;
-$honeydew: #D0E1D4
+$violet-blue: #314CB6;
+$honeydew: #D0E1D4;
+$granite-gray:#605F5E;
+$platinum: #E2E2E2;
+$orange: #F79824;
+$cerulean: #6096BA;
+$dark-cerulean: #75A3C2;
