--- a/src/components/Post It/styles.module.scss
+++ b/src/components/Post It/styles.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/variables';
 
 .container{
-    width: 80%;
+    width: 60%;
     height: 100%;
 
 
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 0.5rem;
     margin: 0 auto;
     margin-top: 1rem;
     padding: 0.5rem;
@@ -29,18 +30,21 @@
     }
 
     h1{
+        text-align: center;
+        font-weight: 700;
+        color: #Fff;
     }
 
     p{
-       
+       text-align: center;
        font-weight: 400;
     }
 
     span{
-     
+     font-weight: 400;
     }
 
     h5{
-        
+        font-weight: 700;
     }
 }
